--- a/Project/adminartifacts.html
+++ b/Project/adminartifacts.html
@@ -39,6 +39,14 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<style>
+			.search-style {
+				background-color: #ffdaad;
+				background: rgba(255, 255, 255, 0.7);
+				border-radius: 5px;
+				border: 1px solid #000000;
+			}
+		</style>
 		<script>
 			document.addEventListener("DOMContentLoaded", function () {
 				getLoggedIn();
@@ -163,6 +171,83 @@
 							divOverall.appendChild(divOverlay);
 							divOverall.appendChild(divContainer);
 							document.getElementById("admin").appendChild(divOverall);
+
+							divSearch = document.createElement("div");
+							divSearch.classList.add("row", "justify-content-center");
+							divSearch2 = document.createElement("div");
+							divSearch2.classList.add(
+								"input-group",
+								"col-sm-2",
+								"col-md-4",
+								"mb-3"
+							);
+							search = document.createElement("input");
+							search.classList.add("form-control");
+							search.setAttribute("type", "text");
+							search.setAttribute("id", "nameInput");
+							search.setAttribute("placeholder", "Search..");
+							search.setAttribute("aria-label", "Search..");
+							search.setAttribute("aria-describedby", "basic-addon2");
+							divSearch2.appendChild(search);
+							divSearch.appendChild(divSearch2);
+
+							divSearchBtn = document.createElement("div");
+							divSearchBtn.classList.add("input-group-append");
+							SearchBtn = document.createElement("button");
+							SearchBtn.classList.add("btn", "btn-secondary");
+							SearchBtn.setAttribute("type", "button");
+							searchIcon = document.createElement("i");
+							searchIcon.classList.add("fa", "fa-search");
+							searchIcon.setAttribute("arial-hidden", "true");
+							SearchBtn.appendChild(searchIcon);
+							divSearchBtn.appendChild(SearchBtn);
+							divSearch.appendChild(divSearchBtn);
+							document.getElementById("admin").appendChild(divSearch);
+
+							divHeaders = document.createElement("div");
+							divHeaders.classList.add("row", "justify-content-center");
+							divCol = document.createElement("div");
+							divCol.classList.add("col-9");
+							divRow = document.createElement("div");
+							divRow.classList.add("row");
+							divImage = document.createElement("div");
+							divImage.classList.add("col-2", "search-style");
+							aImage = document.createElement("a");
+							aImage.innerHTML = "Image";
+							divImage.appendChild(aImage);
+							divName = document.createElement("div");
+							divName.classList.add("col-4", "search-style");
+							aName = document.createElement("a");
+							aName.innerHTML = "Name";
+							divName.appendChild(aName);
+							divDesc = document.createElement("div");
+							divDesc.classList.add("col-6", "search-style");
+							aDesc = document.createElement("a");
+							aDesc.innerHTML = "Description";
+							divDesc.appendChild(aDesc);
+							divRow.appendChild(divImage);
+							divRow.appendChild(divName);
+							divRow.appendChild(divDesc);
+							divCol.appendChild(divRow);
+							divHeaders.appendChild(divCol);
+							document.getElementById("admin").appendChild(divHeaders);
+
+							divResult = document.createElement("div");
+							divResult.classList.add("row", "justify-content-center");
+							divR = document.createElement("div");
+							divR.classList.add("col-9");
+							divR.setAttribute("id", "queryContainer");
+							divR.setAttribute(
+								"style",
+								"height: 58vh; overflow: scroll; overflow-x: hidden"
+							);
+							divResult.appendChild(divR);
+							document.getElementById("admin").appendChild(divResult);
+							document
+								.getElementById("nameInput")
+								.addEventListener("keyup", function () {
+									onTypeArtifactQuery();
+								});
 						}
 					},
 					error: function (xhr, status, error) {
@@ -187,14 +272,6 @@
 					tag: form.tag.value,
 				};
 			}
-
-			document.addEventListener("DOMContentLoaded", function () {
-				document
-					.getElementById("nameInput")
-					.addEventListener("keyup", function () {
-						onTypeArtifactQuery();
-					});
-			});
 
 			var onTypeArtifactQuery = function () {
 				//get data from database using $.ajax post request from jquery
@@ -295,11 +372,10 @@
 				parent.appendChild(holder);
 			}
 		</script>
-		<style></style>
 	</head>
 	<body>
 		<div id="admin"></div>
-		<div class="row justify-content-center">
+		<!-- <div class="row justify-content-center">
 			<div class="input-group col-sm-2 col-md-4 mb-3">
 				<input
 					type="text"
@@ -320,37 +396,13 @@
 		<div class="row justify-content-center">
 			<div class="col-9">
 				<div class="row">
-					<div
-						class="col-2"
-						style="
-							background-color: #ffdaad;
-							background: rgba(255, 255, 255, 0.7);
-							border-radius: 5px;
-							border: 1px solid #000000;
-						"
-					>
+					<div class="col-2 search-style">
 						<a>Image</a>
 					</div>
-					<div
-						class="col-4"
-						style="
-							background-color: #ffdaad;
-							background: rgba(255, 255, 255, 0.7);
-							border-radius: 5px;
-							border: 1px solid #000000;
-						"
-					>
+					<div class="col-4 search-style">
 						<a>Name</a>
 					</div>
-					<div
-						class="col-6"
-						style="
-							background-color: #ffdaad;
-							background: rgba(255, 255, 255, 0.7);
-							border-radius: 5px;
-							border: 1px solid #000000;
-						"
-					>
+					<div class="col-6 search-style">
 						<a>Description</a>
 					</div>
 				</div>
@@ -362,6 +414,6 @@
 				style="height: 58vh; overflow: scroll; overflow-x: hidden"
 				class="col-9"
 			></div>
-		</div>
+		</div> -->
 	</body>
 </html>
