fixed formatting for tags

--- a/Project/index.html
+++ b/Project/index.html
@@ -59,8 +59,8 @@
 					container.innerHTML = "";
 
 					if(data.length > 0) {
-						document.getElementById("headerStuff").style.display = "block";
-						document.getElementById("contentStuff").style.display = "block";
+						document.getElementById("headerStuff").style.display = "flex";
+						document.getElementById("contentStuff").style.display = "flex";
 					} else {
 						document.getElementById("headerStuff").style.display = "none";
 						document.getElementById("contentStuff").style.display = "none";
