--- a/Project/adminevents.html
+++ b/Project/adminevents.html
@@ -67,6 +67,18 @@
 							h1.innerHTML = "Admin Page";
 							divOverlay.appendChild(h1);
 
+							var buttonContainer = document.createElement("div");
+							buttonContainer.classList.add("container");
+							var backButton = document.createElement("button");
+							backButton.classList.add("btn", "btn-primary");
+							backButton.setAttribute("type", "button");
+							backButton.setAttribute(
+								"onclick",
+								"location.href='../Project/admin.html'"
+							);
+							backButton.innerHTML = "Back to Admin Page";
+							buttonContainer.appendChild(backButton);
+
 							var divContainer = document.createElement("div");
 							divContainer.classList.add("container");
 							var formHeader = document.createElement("h4");
@@ -151,6 +163,7 @@
 
 							divSearch = document.createElement("div");
 							divSearch.classList = divOverall.appendChild(divOverlay);
+							divOverall.appendChild(buttonContainer);
 							divOverall.appendChild(divContainer);
 							document.getElementById("admin").appendChild(divOverall);
 
