changed titles and added icon library to a page

--- a/Project/adminartifacts.html
+++ b/Project/adminartifacts.html
@@ -18,7 +18,7 @@
 
 		<link rel="stylesheet" href="CSS/style.css" />
 		<script src="JS/jscript.js"></script>
-		<title>Admin Page</title>
+		<title>Admin Page Artifacts</title>
 		<link rel="icon" type="image/x-icon" href="Images/museum.png" />
 
 		<!-- Optional JavaScript -->
