--- a/Project/admineditEvents.html
+++ b/Project/admineditEvents.html
@@ -12,7 +12,7 @@
 
 		<link rel="stylesheet" href="CSS/style.css" />
 		<script src="JS/jscript.js"></script>
-		<title>Admin Page Events</title>
+		<title>Admin Edit Event</title>
 		<link rel="icon" type="image/x-icon" href="Images/museum.png" />
 
 		<!-- Optional JavaScript -->
