--- a/Project/adminevents.html
+++ b/Project/adminevents.html
@@ -10,6 +10,12 @@
 			crossorigin="anonymous"
 		/>
 
+		<!-- Add icon library -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+
 		<link rel="stylesheet" href="CSS/style.css" />
 		<script src="JS/jscript.js"></script>
 		<title>Admin Page Events</title>
