--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -22,17 +22,62 @@
 		<link rel="icon" type="image/x-icon" href="Images/museum.png" />
 
 		<script>
+			// Store the default options in an object
+			const defaultOptions = {
+				centerMode: true,
+				slidesToShow: 5,
+				infinite: true,
+				arrows: true,
+				dots: false,
+				slidesToScroll: 1,
+				appendArrows: '.slider-nav',
+				prevArrow: '<button type="button" class="slick-prev"><span class="sr-text">Previous</span><img class="prev" aria-hidden="true" width="50px" src="https://assets.codepen.io/588944/noun-arrow-1920806-1a1a1a.svg" /></button>',
+				nextArrow: '<button type="button" class="slick-next"><span class="sr-text">Next</span><img class="next" aria-hidden="true" width="50px" src="https://assets.codepen.io/588944/noun-arrow-1920806-1a1a1a.svg" /></button>',
+				responsive: [
+					{
+					breakpoint: 1024,
+					settings: {
+						slidesToShow: 3,
+						slidesToScroll: 1,
+					}
+					},
+					{
+					breakpoint: 767,
+					settings: {
+						slidesToShow: 1,
+						slidesToScroll: 1
+					}
+					}
+				]
+			};
+
 			document.addEventListener("DOMContentLoaded", function () {
 				getArtifacts();
 
-				document.getElementById("coverContainer").addEventListener("wheel", function() {
-					if(event.wheelDeltaY > 0) {
-						document.getElementsByClassName("next")[0].click();
+				$(".slides").on("wheel", function(event) {
+					event.preventDefault();
+					var slideAmount = parseInt(document.getElementById("inputNumber").value);
+					if(slideAmount > 1) {
+						setSlickOptions(5, slideAmount);
 					} else {
-						document.getElementsByClassName("prev")[0].click();
+						setSlickOptions(5, 1);
 					}
+					
+					var delta = event.originalEvent.deltaX || event.originalEvent.deltaY;
+					var direction = delta > 0 ? "prev" : "next";
+					$(".slides").slick(direction);
+					resetSlickOptions();
 				});
 			});
+
+			function setSlickOptions(show, scroll) {
+				$('.slides').slick('slickSetOption', 'slidesToShow', show, true);
+				$('.slides').slick('slickSetOption', 'slidesToScroll', scroll, true);
+			}
+
+			function resetSlickOptions() {
+				$('.slides').slick('slickSetOption', defaultOptions, true);
+			}
 
 			var getArtifacts = function () {
 				var allData = "";
@@ -107,18 +152,25 @@
 		</style>
 	</head>
 	<body>
-		<div class="row" id="main"></div>
-
 		<div class="row">
-		<div class="overlay text-center">
-			<h1 class="maintitle">Interactive Timeline System</h1>
-		</div>
-		<div class="area">
-			<div class="slider">
-			<div class="slides" id="coverContainer"></div>
-			<div class="slider-nav"></div>
+			<div class="row justify-content-center form-group col-12">
+				<div class="text-right p-3 rounded" style="background-color: bisque;">
+					<label for="inputNumber" class="col-form-label">Amount of slides to scroll by:</label>
+				</div>
+				<div class="input-group col-2 p-3">
+					<div class="input-group-prepend">
+					<span class="input-group-text"><i class="fas fa-hashtag"></i></span>
+					</div>
+					<input type="number" class="form-control" id="inputNumber" value="3">
+				</div>
 			</div>
-		</div>
+			  
+			<div class="area">
+				<div class="slider">
+				<div class="slides" id="coverContainer"></div>
+				<div class="slider-nav"></div>
+				</div>
+			</div>
 		</div>
   	</body>
 </html>
